--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,27 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin : 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
 }
 
 a {
-  color: inherit;
+  color          : #4b4bf3;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+}
+
+li {
+  list-style : none;
+  font-weight: 500;
+  line-height: 2;
+}
+
+li span {
+  font-weight: 400;
 }
